--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,12 @@
 <resources>
     <string name="app_name">iMap</string>
-    <string name="nav_menu_collection">收藏</string>
+    <string name="nav_menu_collection">收藏夹</string>
     <string name="collection">收藏夹</string>
     <string name="nav_menu_score">积分</string>
-    <string name="nav_menu_setting">设置</string>
+    <string name="nav_menu_map_change_satellite">切换卫星云图</string>
+    <string name="nav_menu_map_change_normal">切换平面地图</string>
+    <string name="nav_menu_map_navigation_compass">罗盘导航</string>
+    <string name="nav_menu_map_navigation_normal">常规导航</string>
     <string name="search">搜索</string>
     <string name="exchange_route">返程路线</string>
     <string name="input_end">输入终点</string>
@@ -15,6 +18,7 @@
     <string name="err_no_endnode_result">请先选择目标导航点</string>
     <string name="err_no_loc_service">定位失败，请开启定位服务后重试</string>
     <string name="err_no_network_service">加载失败，请连接网络后重试</string>
+    <string name="err_no_permission_access">授权失败，请提供权限以使用</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
